# traderjoe_v2_substreams

./: .gitignore  Cargo.toml  Makefile  auth.sh  build.rs  schema.graphql  subgraph.yaml  substreams.yaml
proto/: traderjoe_v2.entities.proto  traderjoe_v2.events.proto  traderjoe_v2.proto
src/: lib.rs
src/abi/: dexlens.rs  lb_factory.rs  lb_pair.rs  mod.rs
src/db/: factory.rs  pairs.rs
src/events/: factory_events.rs  flashloans.rs  lbfactory.rs  mod.rs  swaps.rs  template_events.rs
src/pb/: mod.rs  traderjoe.v2.entities.rs  traderjoe.v2.events.rs  traderjoe.v2.rs
src/stores/: fees.rs  lb_pairs.rs  lbfactory.rs  mod.rs  pairs.rs  swaps.rs  time_windows.rs  totals.rs
src/utils/: constants.rs  helper.rs  mod.rs  pricing.rs  rpc.rs
